--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -35,6 +35,7 @@
     </style>
     
 </head>
+
 <body style="background: radial-gradient(100vw, white, #1880455e);">
     <!-- Header -->
     <div class="site-header" >
@@ -47,6 +48,7 @@
         </div>
         </nav>
     </div>
+    
     <!-- Form -->
     <div class="container-fluid" id="homeBody" style="padding-top:45px;" >
         <div class="form shadow-lg" id="formHeight">
@@ -175,6 +177,43 @@
         <br><br><br><br><br>
         <!-- Spacing -->
     </div>
+     <!-- USER MANUAL / HELP-->
+ <input type="checkbox" id="helpCheckBox">
+ <label class="help-container"  for="helpCheckBox" >
+     <label class="button helpIconButton hoverableButton" for="helpCheckBox" data-toggle="tooltip" data-bs-placement="left" data-bs-offset="0,7"
+     title="Help">
+     <i class="fa-solid fas fa-question"></i>
+     </label>
+     <ul class="helpOptions">
+         <li>
+             <span class="btn-label hoverableButton" data-bs-toggle="modal" data-bs-target="#loginQ1">How can I create An Account?</span>
+         </li>
+         </li>
+     </ul>
+ </label>
+ 
+ <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- USER MANUAL / HELP MODALS -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
+ 
+ <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- Q1 MODAL -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
+ 
+ <div class="modal fade" id="loginQ1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal-dialog modal-dialog-centered modal-xl">
+     <div class="modal-content">
+         <div class="modal-header text-center d-flex justify-content-start">
+             <img class="navbar-icon" style="margin-right:10px;" src="{% static '/Media/avatar.png' %}"><h5 class="modal-title" id="exampleModalLabel"> PPMS | User Assistance</h5>
+         </div>
+         <div class="modal-body" style="padding:2% 10% 2% 10%;">
+             <div>
+                 <img class="img-fluid" alt="Responsive image" src="{% static '/Media/userManual/createAccount.png' %}">
+             </div>
+         </div>
+         <div class="modal-footer">
+             <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+         </div>
+     </div>
+ </div>
+ </div>
+   
     <!-- Footer -->
     <div class="site-footer" style="background-color: rgba(244, 242, 242, 0.54);">
         <div class="container">
