--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -149,6 +149,7 @@ div.dt-buttons{
   color: rgb(235, 233, 233) !important;
   background-color: #1bb15c !important;
   border-color:rgba(0, 0, 0, 0.356) !important;
+  z-index: 0 !important;
 }
 
 table{
@@ -611,6 +612,7 @@ html {
     background: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100%;
+    z-index: 0 !important;
   }
   /* Mobile size resolution styling for responsiveness*/
   @media (max-width: 570px) {
@@ -734,6 +736,7 @@ html {
     }
     .form-panel.one{
       padding: 30px 30px 30px 30px;
+      z-index: 0 !important;
     }
     
     .form-panel.two.active{
@@ -991,11 +994,13 @@ html {
       opacity: 0;
       visibility: hidden;
       transition: 0.3s ease;
+      z-index: 0 !important;
     }
     .form-panel.one.hidden:before {
       display: block;
       opacity: 1;
       visibility: visible;
+      z-index: 0 !important;
     }
     .form-panel.two {
       z-index: 5;
@@ -1255,11 +1260,13 @@ html {
     opacity: 0;
     visibility: hidden;
     transition: 0.3s ease;
+    z-index: 0 !important;
   }
   .form-panel.one.hidden:before {
     display: block;
     opacity: 1;
     visibility: visible;
+    z-index: 0 !important;
   }
   .form-panel.two {
     z-index: 5;
@@ -1504,4 +1511,125 @@ html {
 /* Validation Buttons Styling */
 #validationButtons a{
   text-decoration: none ;
+}
+
+
+/* USER MANUAL/HELP BUTTON STYLING */
+#helpCheckBox{
+  position:fixed;
+  bottom:10px;
+  right:30px;
+  display:none;
+}
+
+.help-container{
+  position:fixed;
+  bottom:10px;
+  right:25px;
+  cursor:pointer;
+  z-index: 1040;
+}
+
+.helpIconButton{
+  width:50px;
+  height:50px;
+  background:#188045;
+  border-radius: 100%;
+  cursor:pointer;
+  box-shadow: 8px 5px 5px #aaaaaa;
+}
+
+.helpIconButton i{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height: 100%;
+  color:white;
+}
+
+/* Help List Stylings */
+  
+.helpOptions{
+  list-style-type: none;
+  position:absolute;
+  bottom:45px;
+  right:0px;
+  display:none;
+  max-height: 100vh;
+  z-index: 1040;
+}
+
+.helpOptions li{
+  display:flex;
+  justify-content:flex-end;
+  padding:5px;
+  z-index: 1040;
+  position:relative;
+  }
+
+.btn-label{
+  padding:10px 25px;
+  margin-right:10px;
+  align-self: center;
+  background-color: #188045;
+  color:white;
+  border-radius: 3px;
+  box-shadow: 8px 8px 5px #676767;
+  text-align: center;
+  max-width: 500px;
+  min-width: 350px;
+  border-radius: 15px;
+  z-index: 1040;
+  position:relative;
+
+  }
+
+#helpCheckBox:checked + label .helpOptions{
+  display:inline;
+  transition: 1s;
+}
+
+/* .help-container:hover .helpOptions{
+  display:inline;
+} */
+@media screen and (max-width: 500px) {
+  .helpIconButton i{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height: 100%;
+    color:white;
+    font-size: 15px;
+  }
+  
+  .btn-label{
+    padding:10px 25px;
+    margin-right:10px;
+    align-self: center;
+    background-color: #188045;
+    color:white;
+    border-radius: 3px;
+    box-shadow: 8px 8px 5px #676767;
+    text-align: center;
+    max-width: 500px;
+    min-width: 230px;
+    border-radius: 15px;
+    z-index: 1040;
+    }
+
+  .helpOptions{
+    list-style-type: none;
+    position:absolute;
+    bottom:45px;
+    right:0px;
+    display:none;
+    z-index: 1040;
+  }
+
+  .help-container{
+    position:fixed;
+    bottom:10px;
+    right:10px;
+    cursor:pointer;
+  }
 }
