--- a/ppms_project/profilingApp/templates/activities/Admin - Validation.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Validation.html
@@ -169,7 +169,7 @@
                                     <td style="text-align: center;">
                                         <div>
                                             <button type="button" style="background-color: #188045; color: #ffffff;" class="btn hoverableButton" title="Validate" onclick="toggleValidateModal('Are you sure you want to validate {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')"><i class="fa fa-lg fa-fw fa-user-check"></i></button>
-                                            <button type="button" style="color: rgb(255, 0, 0);" class="btn" onclick="toggleDeleteModal('Are you sure you want to delete {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')" title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button>
+                                            <button type="button" style="color: rgb(255, 0, 0);" class="btn hoverableButtonRed" onclick="toggleDeleteModal('Are you sure you want to delete {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')" title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button>
                                         </div>
                                         <script>
                                             function toggleValidateModal(message) {
