--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+                        <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
                     </div>
                 </div>
             </div>
@@ -412,8 +412,8 @@
                         
                     </div>
                     <div class="modal-footer d-flex justify-content-end">
-                        <button type="button" class="btn" style="background-color: #EF3A25; color: white; min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
-                        <button type="submit" class="btn " style="background-color: #188045; color: white;  min-width: 10%;">Add</button>
+                        <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white; min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
+                        <button type="submit" class="btn hoverableButton" style="background-color: #188045; color: white;  min-width: 10%;">Add</button>
                     </div>
                 </form>
                 </div>
