--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <div class="card-footer d-flex justify-content-end">
-                        <button type="button" class="btn" style="background-color: #EF3A25; color: white;min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+                        <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white;min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
                 </div>
             </div>
         </div>
