--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -230,8 +230,8 @@
                                                     
                                             </div>
                                             <div class="modal-footer text-end ">
-                                                <button type="button" class="btn" style="background-color: #EF3A25; color: white; min-width: 15%;" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
-                                                    <button type="submit" class="btn btn-primary" style="background-color: #188045;border-color: #188045; min-width: 15%;">Confirm</button>
+                                                <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white; min-width: 15%;" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
+                                                    <button type="submit" class="btn btn-primary hoverableButton" style="background-color: #188045;border-color: #188045; min-width: 15%;">Confirm</button>
                                             </div>
                                         </form>
                                         </div>
@@ -268,8 +268,8 @@
                                                 
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn" style="background-color: #EF3A25; color: white; min-width: 12%;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
-                                                <button type="submit" class="btn " style="background-color: #188045; color: white; min-width: 12%;">Save</button>
+                                                <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white; min-width: 12%;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
+                                                <button type="submit" class="btn hoverableButton " style="background-color: #188045; color: white; min-width: 12%;">Save</button>
                                                
                                             </div>
                                         </form>
@@ -351,7 +351,7 @@
                                                 </div>
                                             </div>
                                             <div class="card-footer d-flex justify-content-end ">
-                                                <button type="button" class="btn" style="background-color: #EF3A25; color: white; min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+                                                <button type="button" class="btn hoverableButtonRed" style="background-color: #EF3A25; color: white; min-width: 10%;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
 
                                                 
                                             </div>
