--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -66,7 +66,12 @@ a{
 
 
 /* Hoverable Buttons Styling */
-
+.hoverableButtonRed:hover{
+  background-color: #ff5441 !important;
+  color: #ffffff !important;
+  transform: scale(1.025);
+  transition: 0.3s;
+}
 .hoverableButton:hover{
   background-color: #21a95c!important;
   color: #ffffff !important;
