--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -219,8 +219,8 @@
                         </div>
                 </div>
                         <div class="modal-footer justify-content-center" >
-                            <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;min-width: 15%;" class="btn">Cancel</button>
-                            <button type="submit" class="btn btn-primary" style="background-color: #188045;border-color: #188045; min-width: 15%;">Add</button>
+                            <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;min-width: 15%;" class="btn hoverableButtonRed">Cancel</button>
+                            <button type="submit" class="btn btn-primary hoverableButton" style="background-color: #188045;border-color: #188045; min-width: 15%;">Add</button>
                         </div>
                     </form>
                 
